noinst_PROGRAMS =			\
	benchmark_filter_less		\
	benchmark_filter_and		\
	benchmark_filter_or		\
	benchmark_filter_reference	\
	benchmark_sorter

benchmark_filter_less_SOURCES = benchmark_filter_less.cpp
benchmark_filter_less_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

benchmark_filter_and_SOURCES = benchmark_filter_and.cpp
benchmark_filter_and_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

benchmark_filter_or_SOURCES = benchmark_filter_or.cpp
benchmark_filter_or_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

benchmark_filter_reference_SOURCES = benchmark_filter_reference.cpp
benchmark_filter_reference_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

benchmark_sorter_SOURCES = benchmark_sorter.cpp
benchmark_sorter_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la
