TESTS =				\
	test_data_types		\
	test_string

#	test_string		\
#	test_array		\
#	test_db			\
#	test_table		\
#	test_column		\
#	test_index		\
#	test_expression		\
#	test_merger		\
#	test_sorter		\
#	test_pipeline		\
#	test_issue_62

check_PROGRAMS = $(TESTS)

test_data_types_SOURCES = test_data_types.cpp
test_data_types_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

test_string_SOURCES = test_string.cpp
test_string_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_string_SOURCES = test_string.cpp
#test_string_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_array_SOURCES = test_array.cpp
#test_array_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_db_SOURCES = test_db.cpp
#test_db_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_table_SOURCES = test_table.cpp
#test_table_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_column_SOURCES = test_column.cpp
#test_column_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_index_SOURCES = test_index.cpp
#test_index_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_expression_SOURCES = test_expression.cpp
#test_expression_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_merger_SOURCES = test_merger.cpp
#test_merger_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_sorter_SOURCES = test_sorter.cpp
#test_sorter_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_pipeline_SOURCES = test_pipeline.cpp
#test_pipeline_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la

#test_issue_62_SOURCES = test_issue_62.cpp
#test_issue_62_LDADD = $(top_srcdir)/lib/grnxx/libgrnxx.la
