noinst_LTLIBRARIES = libgrnxx_charset.la

libgrnxx_charset_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_charset_la_SOURCES =		\
	euc-jp.cpp			\
	shift_jis.cpp			\
	utf-8.cpp

libgrnxx_charset_includedir = ${includedir}/grnxx/charset
libgrnxx_charset_include_HEADERS =	\
	euc-jp.hpp			\
	shift_jis.hpp			\
	utf-8.hpp
