noinst_LTLIBRARIES = libgrnxxio.la

libgrnxxio_la_SOURCES =		\
	block.cpp		\
	chunk.cpp		\
	file-posix.cpp		\
	file-windows.cpp	\
	file.cpp		\
	file_info.cpp		\
	file_info-impl.cpp	\
	flags.cpp		\
	path.cpp		\
	pool.cpp		\
	pool-impl.cpp		\
	view-posix.cpp		\
	view-windows.cpp	\
	view.cpp

libgrnxxio_includedir = ${includedir}/grnxx/io
libgrnxxio_include_HEADERS =	\
	block.hpp		\
	chunk.hpp		\
	file-posix.hpp		\
	file-windows.hpp	\
	file.hpp		\
	file_info.hpp		\
	file_info-impl.hpp	\
	flags.hpp		\
	path.hpp		\
	pool.hpp		\
	pool-impl.hpp		\
	view-posix.hpp		\
	view-windows.hpp	\
	view.hpp

