noinst_LTLIBRARIES = libgrnxx_io.la

libgrnxx_io_la_SOURCES =	\
	block.cpp		\
	chunk.cpp		\
	file-posix.cpp		\
	file-windows.cpp	\
	file.cpp		\
	file_info.cpp		\
	file_info-impl.cpp	\
	path.cpp		\
	pool.cpp		\
	pool-impl.cpp		\
	view-posix.cpp		\
	view-windows.cpp	\
	view.cpp

libgrnxx_io_includedir = ${includedir}/grnxx/io
libgrnxx_io_include_HEADERS =	\
	block.hpp		\
	chunk.hpp		\
	file-posix.hpp		\
	file-windows.hpp	\
	file.hpp		\
	file_info.hpp		\
	file_info-impl.hpp	\
	path.hpp		\
	pool.hpp		\
	pool-impl.hpp		\
	view-posix.hpp		\
	view-windows.hpp	\
	view.hpp
