noinst_LTLIBRARIES = libgrnxx_time.la

libgrnxx_time_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_time_la_SOURCES =	\
	broken_down_time.cpp	\
	duration.cpp		\
	internal_clock.cpp	\
	stopwatch.cpp		\
	system_clock.cpp	\
	time.cpp

libgrnxx_time_includedir = ${includedir}/grnxx/time
libgrnxx_time_include_HEADERS =	\
	broken_down_time.hpp	\
	duration.hpp		\
	internal_clock.hpp	\
	stopwatch.hpp		\
	system_clock.hpp	\
	time.hpp
