noinst_LTLIBRARIES = libgrnxx_array.la

libgrnxx_array_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_array_la_SOURCES =		\
	array_1d.cpp			\
	array_2d.cpp			\
	array_3d.cpp

libgrnxx_array_includedir = ${includedir}/grnxx/array
libgrnxx_array_include_HEADERS =	\
	array_1d.hpp			\
	array_2d.hpp			\
	array_3d.hpp
