noinst_LTLIBRARIES = libgrnxx_storage.la

libgrnxx_storage_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_storage_la_SOURCES =		\
	file.cpp			\
	file-posix.cpp			\
	file-windows.cpp		\
	path.cpp			\
	view.cpp			\
	view-posix.cpp			\
	view-windows.cpp		\
	node_header.cpp

libgrnxx_storage_includedir = ${includedir}/grnxx/storage
libgrnxx_storage_include_HEADERS =	\
	file.hpp			\
	file-posix.hpp			\
	file-windows.hpp		\
	path.hpp			\
	view.hpp			\
	view-posix.hpp			\
	view-windows.hpp		\
	node_header.hpp
