noinst_LTLIBRARIES = libgrnxx_storage.la

libgrnxx_storage_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_storage_la_SOURCES =		\
	chunk.cpp			\
	chunk-posix.cpp			\
	chunk-windows.cpp		\
	chunk_index.cpp			\
	file.cpp			\
	file-posix.cpp			\
	file-windows.cpp		\
	header.cpp			\
	node_header.cpp			\
	path.cpp			\
	storage_impl.cpp

libgrnxx_storage_includedir = ${includedir}/grnxx/storage
libgrnxx_storage_include_HEADERS =	\
	chunk.hpp			\
	chunk-posix.hpp			\
	chunk-windows.hpp		\
	chunk_index.hpp			\
	file.hpp			\
	file-posix.hpp			\
	file-windows.hpp		\
	header.hpp			\
	node_header.hpp			\
	path.hpp			\
	storage_impl.hpp
