#SUBDIRS =					\
#	sub

lib_LTLIBRARIES = libgrnxx_impl_column.la

#libgrnxx_impl_column_la_LIBADD =		\
#	sub/libgrnxx_impl_column_sub.la

libgrnxx_impl_column_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_impl_column_la_SOURCES =		\
	column_base.cpp

libgrnxx_impl_column_includedir = ${includedir}/grnxx/impl/column
libgrnxx_impl_column_include_HEADERS =		\
	column_base.hpp
