noinst_LTLIBRARIES = libgrnxx_map_array_map.la

libgrnxx_map_array_map_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_map_array_map_la_SOURCES =		\
	dummy.cpp				\
	header.cpp

libgrnxx_map_array_map_includedir = ${includedir}/grnxx/map/array_map
libgrnxx_map_array_map_include_HEADERS =	\
	bit_array.hpp				\
	dummy.hpp				\
	header.hpp				\
	key_array.hpp
