noinst_LTLIBRARIES = libgrnxx_map_double_array.la

libgrnxx_map_double_array_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_map_double_array_la_SOURCES =		\
	dummy.cpp				\
	header.cpp

libgrnxx_map_double_array_includedir = ${includedir}/grnxx/map/double_array
libgrnxx_map_double_array_include_HEADERS =	\
	block.hpp				\
	dummy.hpp				\
	entry.hpp				\
	header.hpp				\
	node.hpp
