noinst_LTLIBRARIES = libgrnxx_map_hash_table.la

libgrnxx_map_hash_table_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_map_hash_table_la_SOURCES =		\
	dummy.cpp				\
	header.cpp

libgrnxx_map_hash_table_includedir = ${includedir}/grnxx/map/hash_table
libgrnxx_map_hash_table_include_HEADERS =	\
	bit_array.hpp				\
	dummy.hpp				\
	hash.hpp				\
	header.hpp				\
	key_array.hpp				\
	key_id_array.hpp			\
	link_array.hpp
