noinst_LTLIBRARIES = libgrnxx_map_patricia.la

libgrnxx_map_patricia_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_map_patricia_la_SOURCES =	\
	dummy.cpp			\
	header.cpp

libgrnxx_map_patricia_includedir = ${includedir}/grnxx/map/patricia
libgrnxx_map_patricia_include_HEADERS =	\
	dummy.hpp			\
	header.hpp
