noinst_LTLIBRARIES = libgrnxx_map_da_basic.la

libgrnxx_map_da_basic_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_map_da_basic_la_SOURCES =	\
	id_cursor.cpp			\
	trie.cpp

libgrnxx_map_da_basic_includedir = ${includedir}/grnxx/map/da/basic
libgrnxx_map_da_basic_include_HEADERS =	\
	id_cursor.hpp			\
	trie.hpp
