#SUBDIRS =					\
#	sub

lib_LTLIBRARIES = libgrnxx_impl_column_vector.la

#libgrnxx_impl_column_vector_la_LIBADD =	\
#	sub/libgrnxx_impl_column_vector_sub.la

libgrnxx_impl_column_vector_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_impl_column_vector_la_SOURCES =

#	bool.cpp				\
#	float.cpp				\
#	geo_point.cpp				\
#	int.cpp					\
#	text.cpp

libgrnxx_impl_column_vector_includedir = ${includedir}/grnxx/impl/column/vector
libgrnxx_impl_column_vector_include_HEADERS =	\
	bool.hpp				\
	float.hpp				\
	geo_point.hpp				\
	int.hpp					\
	text.hpp
