noinst_LTLIBRARIES = libgrnxx_map_da_large.la

libgrnxx_map_da_large_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_map_da_large_la_SOURCES =	\
	id_cursor.cpp			\
	key_cursor.cpp			\
	predictive_cursor.cpp		\
	prefix_cursor.cpp		\
	trie.cpp

libgrnxx_map_da_large_includedir = ${includedir}/grnxx/map/da/large
libgrnxx_map_da_large_include_HEADERS =	\
	id_cursor.hpp			\
	key_cursor.hpp			\
	predictive_cursor.hpp		\
	prefix_cursor.hpp		\
	trie.hpp
