noinst_LTLIBRARIES = libgrnxx_alpha_map.la

libgrnxx_alpha_map_la_LDFLAGS = @AM_LTLDFLAGS@

libgrnxx_alpha_map_la_SOURCES =		\
	array.cpp			\
	cursor.cpp			\
	double_array.cpp		\
	double_array-slice.cpp		\
	scan.cpp

libgrnxx_alpha_map_includedir = ${includedir}/grnxx/alpha/map
libgrnxx_alpha_map_include_HEADERS =	\
	array.hpp			\
	cursor.hpp			\
	double_array.hpp		\
	header.hpp			\
	scan.hpp
